# dune-grid-multiscale

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.felix  LICENSE  Makefile.am  README  README.md  configure.ac  dune-grid-multiscale.pc.in  dune.module  stamp-vc
cmake/: cmake_config.h.in
cmake/modules/: DuneGridMultiscaleMacros.cmake
doc/: CMakeLists.txt  Makefile.am
doc/doxygen/: CMakeLists.txt  Doxylocal  Makefile.am
dune/: CMakeLists.txt  Makefile.am
dune/grid/: CMakeLists.txt  Makefile.am
dune/grid/multiscale/: CMakeLists.txt  Makefile.am  default.hh  default_2d_aluconform.cc  exists.cc  exists.hh  filtered.hh  glued.hh  provider.hh  subgrid.hh
dune/grid/multiscale/factory/: Makefile.am  default.hh  filtered.hh  multidomain.hh  subgrid.hh
dune/grid/multiscale/filtered/: cube.hh
dune/grid/multiscale/gridpart/: leaf.hh  local.hh  view.hh
dune/grid/multiscale/gridpart/indexset/: default.hh  empty.hh  local.hh
dune/grid/multiscale/gridpart/iterator/: codim0.hh
dune/grid/multiscale/provider/: Makefile.am  cube.hh  functionbased.hh  interface.hh
dune/grid/multiscale/test/: CMakeLists.txt  empty.cc  glued.hh  glued_2d.cc  glued_3d.cc  provider.cc  provider_cube.hh  provider_cube_1d.cc  provider_cube_2d.cc  provider_cube_3d.cc
dune/grid/part/: Makefile.am  interface.hh  leaf.hh  local.hh  view.hh
dune/grid/part/indexset/: Makefile.am  default.hh  empty.hh  local.hh
dune/grid/part/intersection/: Makefile.am  wrapper.hh
dune/grid/part/iterator/: Makefile.am  codim0.hh
dune/grid/part/iterator/intersection/: Makefile.am  local.hh  wrapper.hh
dune/grid/part/iterator/local/: Makefile.am  codim0.hh  indexbased.hh
dune/grid/part/local/: Makefile.am  indexbased.hh
dune/grid_multiscale/: Makefile.am  grid_multiscale.hh
examples/: CMakeLists.txt  Makefile.am  provider.cc
examples/provider/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cube  cube.cc
examples/provider/.deps/: dune_fem-dune_fem.Po
m4/: Makefile.am  dune-grid-multiscale.m4
src/: Makefile.am  dune_grid_multiscale.cc
test/: CMakeLists.txt  empty.cc  glued.cc  glued.hh  glued_2d.cc  provider.cc  provider_functionbased.cc  test_common.hh
tests/: CMakeLists.txt  provider_functionbased.cc  test.cc
