# This file is part of the dune-grid-multiscale project:
#   http://users.dune-project.org/projects/dune-grid-multiscale
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

SUBDIRS = indexset intersection iterator local

grid_part_includedir = $(includedir)/dune/grid/part
grid_part_include_HEADERS = interface.hh leaf.hh view.hh

include $(top_srcdir)/am/global-rules
