# This file is part of the dune-grid-multiscale project:
#   http://users.dune-project.org/projects/dune-grid-multiscale
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

grid_multiscale_factory_includedir = $(includedir)/dune/grid/multiscale
grid_multiscale_factory_include_HEADERS = default.hh

include $(top_srcdir)/am/global-rules
