# This file is part of the dune-grid-multiscale project:
#   http://users.dune-project.org/projects/dune-grid-multiscale
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

grid_multiscale_providerincludedir = $(includedir)/dune/grid/multiscale/provider
grid_multiscale_providerinclude_HEADERS = cube.hh interface.hh

include $(top_srcdir)/am/global-rules
