# This file is part of the dune-grid-multiscale project:
#   http://users.dune-project.org/projects/dune-grid-multiscale
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

grid_part_intersection_includedir = $(includedir)/dune/grid/part/intersection
grid_part_intersection_include_HEADERS = wrapper.hh

include $(top_srcdir)/am/global-rules
