# This file is part of the dune-grid-multiscale project:
#   http://users.dune-project.org/projects/dune-grid-multiscale
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

grid_part_local_includedir = $(includedir)/dune/grid/part/local
grid_part_local_include_HEADERS = indexbased.hh

include $(top_srcdir)/am/global-rules
