# This file is part of the dune-grid-multiscale project:
#   http://users.dune-project.org/projects/dune-grid-multiscale
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

grid_part_iterator_intersection_local_includedir = $(includedir)/dune/grid/part/iterator/intersection/local
grid_part_iterator_intersection_local_include_HEADERS = local.hh wrapper.hh

include $(top_srcdir)/am/global-rules
